# libutils

./: .gitignore  CMakeSettings.json  CMakelists.txt  LICENSE  launch.vs.json
cmake/: BuildModule.cmake
include/libutils/: Daemon.h  IDaemon.h  TemplateProxy.h  ThreadSlice.h  TimerTask.h  TimerTaskContext.h
libs/daemon/: CMakelists.txt
libs/daemon/include/libutils/: Daemon.h  IDaemon.h
libs/daemon/src/: Daemon.cpp  DaemonImpl.cpp  DaemonImpl.h
libs/template/: CMakelists.txt
libs/template/include/libutils/: Template.h  TemplateProxy.h
libs/thread-slice/: CMakelists.txt
libs/thread-slice/include/libutils/: ThreadSlice.h
libs/thread-slice/src/: ThreadSlice.cpp  ThreadSliceImpl.cpp  ThreadSliceImpl.h
libs/time/: CMakelists.txt
libs/time/include/libutils/: Time.h
libs/time/src/: Time.cpp
libs/timer-task/: CMakelists.txt
libs/timer-task/include/libutils/: TimerTask.h  TimerTaskPool.h
libs/timer-task/src/: TimerTask.cpp  TimerTaskImpl.h  TimerTaskPool.cpp  TimerTaskPoolImpl.cpp  TimerTaskPoolImpl.h
src/Daemon/: DaemonImpl.h
src/ThreadSlice/: ThreadSliceImpl.cpp  ThreadSliceImpl.h
src/TimerTask/: TimerTaskImpl.cpp  TimerTaskImpl.h  TimerTaskPoolImpl.cpp  TimerTaskPoolImpl.h
src/implementations/: Daemon.cpp  ThreadSlice.cpp  TimerTask.cpp  TimerTaskPool.cpp
tests/: CMakeLists.txt  TestDeamon.cpp  TestThreadSlice.cpp  TestTimerTask.cpp  main.cpp
